--- a/index.html
+++ b/index.html
@@ -792,31 +792,59 @@
         <!-- contact end -->
         <br><br>
         <!-- location -->
-        <div class="locate">
-            <div class="bdr">
-                <div class="row">
-                    <div class="col-12">
-                        <h1 class="text-center">We Are Located</h1>
-                        <hr color="#9388A2" width="40%" style="height: 1px;">
-                        <hr color="#9388A2" width="30%" style="height: 1px;">
-                    </div>
+        <!-- <div class="location">
+            <div class="row">
+                <div class="col-12">
+                    <h1 class="text-center">We Are Located</h1>
+                    <hr color="#9388A2" width="40%" style="height: 1px;">
+                    <hr color="#9388A2" width="30%" style="height: 1px;">
                 </div>
-                <br>
-                <div class="row">
-                    <div class="col-lg-6 text-justify py-2">
-                        <p><b>ADDRESS</b> <br> 28 appleby street <br> Suburb : williams landing <br> State : victoria</p>
-                        <p><b>COMPANY</b> <br> The-Stitch-Universe</p>
-                        <p><b>E-MAIL</b> <br> info.stitchuniverse@gmail.com</p>
-                        <p><b>Skype</b> <br> (408) 337-6540</p>
-                        <p><b>WHATSAPP</b> <br> (408) 337-6540</p>
-                    </div>
-                    <div class="col-lg-6">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3149.9979989599756!2d144.75208141590537!3d-37.86033724448382!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad689bafd55f677%3A0xa2886bbd93da1927!2s28%20Appleby%20St%2C%20Williams%20Landing%20VIC%203027%2C%20Australia!5e0!3m2!1sen!2s!4v1630874275323!5m2!1sen!2s"
-                            width="100%" height="300" loading="lazy"></iframe>
+
+            </div>
+            <div class="locate">
+                <div class="bdr">
+
+                    <br>
+                    <div class="row">
+                        <div class="col-12 text-center">
+                            <h3>Primary Location</h3>
+                            <hr color="#9388A2" width="15%" style="height: 1px;">
+                            <hr color="#9388A2" width="10%" style="height: 1px;">
+                            <hr color="#9388A2" width="5%" style="height: 1px;">
+                            <br>
+                        </div>
+                        <div class="col-lg-6 text-justify py-2">
+                            <p><b>ADDRESS</b> <br> 28 appleby street <br> Suburb : williams landing <br> State : victoria</p>
+                            <p><b>COMPANY</b> <br> The-Stitch-Universe</p>
+                            <p><b>E-MAIL</b> <br> info.stitchuniverse@gmail.com</p>
+                            <p><b>Skype</b> <br> (408) 337-6540</p>
+                            <p><b>WHATSAPP</b> <br> (408) 337-6540</p>
+                        </div>
+                        <div class="col-lg-6">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3149.9979989599756!2d144.75208141590537!3d-37.86033724448382!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad689bafd55f677%3A0xa2886bbd93da1927!2s28%20Appleby%20St%2C%20Williams%20Landing%20VIC%203027%2C%20Australia!5e0!3m2!1sen!2s!4v1630874275323!5m2!1sen!2s"
+                                width="100%" height="300" loading="lazy"></iframe>
+                        </div>
+                        <div class="col-12 text-center">
+                            <h3>Secondary Location</h3>
+                            <hr color="#9388A2" width="15%" style="height: 1px;">
+                            <hr color="#9388A2" width="10%" style="height: 1px;">
+                            <hr color="#9388A2" width="5%" style="height: 1px;">
+                            <br>
+                        </div>
+                        <div class="col-lg-6 text-justify py-2">
+                            <p><b>ADDRESS</b> <br> Flat No B-3/16 <br> Sector 5-K Dawood Heights North karachi</p>
+                            <p><b>COMPANY</b> <br> The-Stitch-Universe</p>
+                            <p><b>E-MAIL</b> <br> info.stitchuniverse@gmail.com</p>
+                            <p><b>PHONE-NO</b> <br>+923112403722</p>
+                        </div>
+                        <div class="col-lg-6">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d697.1395200113245!2d67.06635191816005!3d24.989497961398623!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb3411e21376d6d%3A0xe3cf0bfbcc8ec4b9!2sDawood%20heights!5e0!3m2!1sen!2s!4v1631463855827!5m2!1sen!2s"
+                                width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- location end -->
         <br>
         <!-- Footer -->
@@ -918,11 +946,44 @@
                             <li>
                                 <a href="protection/Acceptance of Terms.pdf" target="_blank" download="The-Stitch-Universe Terms and Conditions">Term's & Conditions</a>
                             </li>
+                            <li>
+                                <a href="protection/RETURN AND EXCHANGE POLICY.pdf" target="_blank" download="The-Stitch-Universe Terms and Conditions">Refund</a>
+                            </li>
                         </ul>
 
                     </div>
                     <!-- Grid column -->
+                    <hr class="clearfix w-100 d-md-none">
 
+                    <!-- Grid column -->
+                    <div class="col-md-2 mx-auto">
+
+                        <!-- Links -->
+                        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Address</h5>
+
+                        <ul class="list-unstyled">
+                            <li>
+                                <a href="protection/User Guide.pdf" download="userguide"><b> SECONDARY ADDRESS</b></a>
+                                <ul class="list-unstyled">
+                                    <li>
+                                        <p> 28 appleby street Suburb : williams landing State : victoria</p>
+                                    </li>
+                                </ul>
+
+                            </li>
+                            <li>
+                                <a href="#!" class="signup"><b>PRIMARY ADDRESS</b> </a>
+                                <ul class="list-unstyled">
+                                    <li>
+                                        <p> Flat No B-3/16 Sector 5-K Dawood Heights North karachi</p>
+                                    </li>
+                                </ul>
+                            </li>
+
+                        </ul>
+
+                    </div>
+                    <!-- Grid column -->
                 </div>
                 <!-- Grid row -->
 
