--- a/index.html
+++ b/index.html
@@ -658,18 +658,22 @@
             <hr color="#d2d2d2" width="30%" style="height: 1px;">
             <br>
             <div class="row">
-                <div class="col-lg-3 p-3">
+                <div class="col-lg p-3">
                     <img class="img-responsive" src="images/pay cards/skrill.png" alt="" width="200" height="120">
                 </div>
-                <div class="col-lg-3 p-3">
+                <div class="col-lg p-3">
                     <img class="img-responsive" src="images/pay cards/paypal.png" alt="" width="200" height="120">
                 </div>
-                <div class="col-lg-3 p-3">
+                <div class="col-lg p-3">
                     <img class="img-responsive" src="images/pay cards/master.png" alt="" width="200" height="120">
                 </div>
-                <div class="col-lg-3 p-3">
+                <div class="col-lg p-3">
                     <img class="img-responsive" src="images/pay cards/visa.png" alt="" width="200" height="120">
                 </div>
+                <div class="col-lg p-3">
+                    <img class="img-responsive" src="images/pay cards/checkout.png" alt="" width="200" height="120">
+                </div>
+
             </div>
         </div>
         <!-- payment method end -->
