--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
                     <img class="img-responsive" src="images/pay cards/visa.png" alt="" width="200" height="120">
                 </div>
                 <div class="col-lg p-3">
-                    <img class="img-responsive" src="images/pay cards/checkout.png" alt="" width="200" height="120">
+                    <img class="img-responsive" src="images/pay cards/2COlogo-1200x1200.png" alt="" width="200" height="120">
                 </div>
 
             </div>
